--- a/project/appointa/index.html
+++ b/project/appointa/index.html
@@ -212,7 +212,7 @@
             <li class=""><a href="#mid-fiWireframes">Mid-fi screen flow &#38; testing </a></li>
           </ul>
         </li>
-        <li><a href="#solution">Final solution </a></li>
+        <li><a href="#design">Hi-fi design </a></li>
         <li><a href="#takeaways">Takeaways </a></li>
       </ol>
     </nav>
@@ -854,9 +854,9 @@
 
         <div class="Grid Grid--full u-textCenter">
           <div class="Grid-cell">
-            <img class="iconL" src="ppl_recruiter.png" alt="Administration account">
-            <h2>Administration account</h2>
-            <h4>Recruiters &#47; Hiring managers</h4>
+            <img class="iconM" src="ppl_recruiter.png" alt="Administration account">
+            <h3>Administration account</h3>
+            <h6>Recruiters &#47; Hiring managers</h6>
           </div>
         </div>
 
@@ -940,14 +940,14 @@
                 </ul>
               </div>
             </div>
-  
+
             <div class="Grid-cell">
               <div class="element"> <img class="ShadowBox" src="testingNewUser.gif" alt="New User">
               </div>
             </div>
           </div>
         </div>
- 
+
         <div class="blankHM"></div>
 
         <div class="wrapper">
@@ -977,8 +977,8 @@
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
-                <img class="shadowFilter modal-target" src="userflow_Recruiter_scheduledInterviews.svg"
-                  alt="Log in or sign up">
+                <img class="shadowFilter modal-target"
+                  src="userflow_Recruiter_scheduledInterviews.svg" alt="Log in or sign up">
               </div>
             </div>
           </div>
@@ -998,7 +998,7 @@
               </div>
             </div>
           </div>
-          
+
           <div class="blankHS"></div>
           <div class="Grid Grid--gutters Grid--1of3">
             <div class="Grid-cell">
@@ -1010,7 +1010,7 @@
                   <li>Invite team members</li>
                   <li>Setup team members' skills</li>
                   <li>Remove team members from the list</li>
-  
+
                 </ul>
                 <h3 class="">Insights</h3>
                 <ul>
@@ -1018,16 +1018,35 @@
                   <li>Ability to link to the candidate information page, or easy to scan candidate
                     information</li>
                   <li>Able to separate different types of interviews</li>
-  
+
                 </ul>
               </div>
             </div>
-  
+
             <div class="Grid-cell">
               <div class="element"> <img class="ShadowBox" src="testingExistingUser.gif"
                   alt="Existing User"></div>
             </div>
-  
+
+          </div>
+          <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <h4>Recruiter account
+                </h4>
+
+                <h4 class="leftVerLine APPOINTA">Some user wants to <strong
+                    class="textDecor APPOINTA">import</strong> candidate skills from a <strong
+                    class="textDecor APPOINTA">spreadsheet</strong></h4>
+
+                <h4 class="leftVerLine APPOINTA">Most time, recruiters schedule interviews for
+                  candidates, it is better to have the ability to let recruiters schedule interviews
+                  in their account</h4>
+
+
+
+              </div>
+            </div>
           </div>
         </div>
         <!-- admin -->
@@ -1038,9 +1057,9 @@
         <div class="blankHS"></div>
         <div class="Grid Grid--full u-textCenter">
           <div class="Grid-cell">
-            <img class="iconL" src="ppl_teammember.png" alt="members account">
-            <h2>Team member account</h2>
-            <h4>Engineers, designers, marketing and sales, etc.</h4>
+            <img class="iconM" src="ppl_teammember.png" alt="members account">
+            <h3>Team member account</h3>
+            <h6>Engineers, designers, marketing and sales, etc.</h6>
           </div>
         </div>
         <div class="wrapper">
@@ -1071,9 +1090,10 @@
                 </ul>
               </div>
             </div>
-  
+
             <div class="Grid-cell">
-              <div class="element"> <img class="ShadowBox" src="testingInviteLinks.gif" alt="New User">
+              <div class="element"> <img class="ShadowBox" src="testingInviteLinks.gif"
+                  alt="New User">
               </div>
             </div>
           </div>
@@ -1109,9 +1129,10 @@
                 </ul>
               </div>
             </div>
-  
+
             <div class="Grid-cell">
-              <div class="element"> <img class="ShadowBox" src="testingMemberOnboarding.gif" alt="New User">
+              <div class="element"> <img class="ShadowBox" src="testingMemberOnboarding.gif"
+                  alt="New User">
               </div>
             </div>
           </div>
@@ -1120,9 +1141,9 @@
 
         <div class="Grid Grid--full u-textCenter">
           <div class="Grid-cell">
-            <img class="iconL" src="ppl_candidate.png" alt="members account">
-            <h2>Candidate account</h2>
-            <h4>Engineers, designers, marketing and sales, etc.</h4>
+            <img class="iconM" src="ppl_candidate.png" alt="members account">
+            <h3>Candidate account</h3>
+            <h6>Engineers, designers, marketing and sales, etc.</h6>
           </div>
         </div>
         <div class="blankHS"></div>
@@ -1154,9 +1175,10 @@
                 </ul>
               </div>
             </div>
-  
+
             <div class="Grid-cell">
-              <div class="element"> <img class="ShadowBox" src="testingCandidate.gif" alt="New User">
+              <div class="element"> <img class="ShadowBox" src="testingCandidate.gif"
+                  alt="New User">
               </div>
             </div>
           </div>
@@ -1166,18 +1188,47 @@
 
 
 
+
         <div class="Grid Grid--full wrapper">
           <div class="Grid-cell">
+            <div class="element u-textCenter">
+              <h3> Insights</h3>
+            </div>
+
             <div class="element">
-              <h4> Need to working on the  <strong class="textDecor APPOINTA">header navigation</strong> 
+              <h4> After usability testing and revisiting the user interview, the job interview
+                process is most likely <strong class="textDecor APPOINTA">controlled by
+                  recruiters</strong> and recruiting coordinators. From the job interview to the
+                final offer, they may have several interviews they are related, such as phone
+                screens and technical interviews, the interviewers need to know the candidate
+                interview status. Each interview should show the candidate's interview status and be
+                able to link to the candidates' interview management website such as Greenhouse.
               </h4>
-              <h4 class="leftVerLine APPOINTA">How to navigate from home to profile</h4>
-              <h4 class="leftVerLine APPOINTA">Account profile is missing</h4>
-              <h4 class="leftVerLine APPOINTA">Recruiter wants to see team member availability</h4>
+
+              <h4> Flows</h4>
+              <h4 class="leftVerLine APPOINTA">
+                <strong class="textDecor APPOINTA">Navigation</strong> needs to be more
+                straightforward
+              </h4>
+              <h4 class="leftVerLine APPOINTA">Need to design the <strong
+                  class="textDecor APPOINTA">profile</strong> page </h4>
+
+              <h4> Features</h4>
+              <h4 class="leftVerLine APPOINTA">Recruiters want to <strong
+                  class="textDecor APPOINTA">book interviews in their account</strong>
+              </h4>
+              <h4 class="leftVerLine APPOINTA">Recruiters want to see <strong
+                  class="textDecor APPOINTA">team members' availability</strong>
+              </h4>
+              <h4 class="leftVerLine APPOINTA">Recruiters want to <strong
+                  class="textDecor APPOINTA">upload a spreadsheet</strong> with all team
+                members' skills </h4>
+
+
             </div>
           </div>
         </div>
- 
+
         <div class="blankHM"></div>
 
 
@@ -1188,9 +1239,57 @@
 
     </section>
     <div class="blankHS"></div>
-    <hr>
+    <section id="design">
+      <!-- Arrow -->
+      <div class="wrapper">
+        <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+          <div class="Grid-cell">
+            <div class="element">
+              <div class="Grid">
+                <p class="tArrow"> Hi-fi design</p>
+                <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Arrow -->
+      <div class="blankHS"></div>
+      <!-- Placeholder -->
+      <div class="Grid Grid--full u-textCenter wrapper">
+        <div class="Grid-cell">
+          <div class="element">
+            <img class="" src="../../Placeholder.svg" alt="Pain points">
+          </div>
+        </div>
+      </div>
+      <!-- Placeholder -->
+      <!-- Arrow -->
+      <div class="wrapper">
+        <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+          <div class="Grid-cell">
+            <div class="element">
+              <div class="Grid">
+                <p class="tArrow"> UI Components</p>
+                <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Arrow -->
 
+      <!-- UI -->
+      <div class="Grid Grid--full u-textCenter wrapper">
+        <div class="Grid-cell">
+          <div class="element">
+            <img class="modal-target" src="UI_header.png" alt="UI Header">
+          </div>
+        </div>
+      </div>
+      <!-- UI -->
 
+    </section>
     <div class="blankHM"></div>
     <hr>
     <div class="blankHM"></div>
@@ -1217,15 +1316,20 @@
         <div class="Grid-cell">
 
           <div class="element">
-            <h4>Understand how to <strong class="textDecor APPOINTA">match the data</strong> first,
-              and understand the <strong class="textDecor APPOINTA">use case</strong>.
+            <h4>Understand which data need to be matched in order to make the interview works. </h4>
+
+            <h4 class="leftVerLine APPOINTA"> For this website, matching <strong
+                class="textDecor APPOINTA">candidates' availability</strong> with <strong
+                class="textDecor APPOINTA">interviewers' availability</strong> is the key.
             </h4>
-            <h4 class="leftVerLine APPOINTA">Match the <strong class="textDecor APPOINTA">members'
-                skills</strong> to interview required skills or <strong
-                class="textDecor APPOINTA">separate members into different teams</strong> at the
-              beginning of this project, I was going to let users set up a team first, then invite
-              team members, but after interviewing hiring managers, I realized, that interview skill
-              is the key, because team members can attend interview from different team. </h4>
+            <h4 class="leftVerLine APPOINTA"> How to pair their availability, other than sync
+              calendars and working hours, the <strong class="textDecor APPOINTA">interview
+                skills</strong> play a significant role. Without matching candidates' and
+              interveners' skills, the booking won't work. </h4>
+            <h4 class="leftVerLine APPOINTA"> I was trying to <strong
+                class="textDecor APPOINTA">separate members into different teams</strong>, each
+              group has their skills, but that will make this app
+              less flexible but redundant</h4>
           </div>
         </div>
       </div>
