--- a/index.html
+++ b/index.html
@@ -198,9 +198,8 @@
         from the understanding of user needs and the business itself.
       </p>
       <p> I built and update this website myself from scratch using HTML/CSS/JS deployed on AWS.
-        Please
-        visit my <a href="https://github.com/vicky-wyq" class="textIntro">GitHub</a> repository for
-        more details.
+        Please visit my <a href="https://github.com/vicky-wyq" class="textIntro">GitHub</a>
+        repository for more details.
       </p>
     </div>
 
@@ -225,13 +224,13 @@
     <div class="Grid Grid--gutters Grid--cols-3 ">
       <div class="Grid-cell">
         <div class="element">
-          <div class="elementInner ShadowBox heightM">
-            <h3 class=>The way to use</h3>
+          <div class="elementInner ShadowBox">
+            <h4 class=>The way to use</h4>
             <div class="lineHorizS"></div>
             <div class="blankHXS"></div>
-            <h5> <strong>
-                Solving problems by understand user and product</strong>
-            </h5>
+            <h3>
+              Solving problems by understand user &#38; product
+            </h3>
             <ul>
               <li> Understand users </li>
               <li> Understand the product</li>
@@ -242,14 +241,13 @@
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="elementInner ShadowBox heightM">
-            <h3 class=>The way to integrate </h3>
+          <div class="elementInner ShadowBox">
+            <h4 class=>The way to integrate </h4>
             <div class="lineHorizS"></div>
             <div class="blankHXS"></div>
-            <h5> <strong>Simplicity is the key “Less is More” </strong> </h5>
+            <h3>Simplicity is the key “Less is More” </h3>
             <ul>
               <li> Consider existing user flow</li>
-              <li> Integrate with other Apps </li>
               <li> Thoughtful placement of design elements, eliminate redundancy </li>
             </ul>
           </div>
@@ -257,18 +255,17 @@
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="elementInner ShadowBox heightM">
-            <h3>The way to built </h3>
+          <div class="elementInner ShadowBox">
+            <h4>The way to built </h4>
             <div class="lineHorizS"></div>
             <div class="blankHXS"></div>
 
-            <h5> <strong> Quality of design & implantation </strong> </h5>
+            <h3> Quality of design &#38; Implement </h3>
 
             <ul>
               <li> Undersdand design system in Figma</li>
-              <li> Undersdand design system in CSS</li>
-
-              <li> Knowledge of both deisgn & code</li>
+              <li> Reuse the existing components</li>
+              <li> Standardized grid system</li>
 
             </ul>
           </div>
@@ -301,44 +298,38 @@
             <li class="progress__item ">
               <h3>Art</h3>
               <ul>
-                <li> Learning and practicing drawing and painting when I was a child.</li>
-                <li> It provides me a foundation to understand the logic of design</li>
-                <li> Knowledge of both deisgn & code</li>
+                <li> Learning and practicing drawing and painting since primary school</li>
+                <li> It provides me a foundation to understand the color and composition of the
+                  design </li>
               </ul>
             </li>
             <li class="progress__item">
               <h3>Design</h3>
               <ul>
-                <li> I believe design can help people solve problems with artistic
-                  skills</li>
-                <li> I majored in art and design in my college</li>
+                <li> I believe design can help people solve problems in an artistic way, so I chose
+                  art and design major
+                </li>
+                <li>I was interested in geometry operation/manipulation and how to provide a function with geometrics during studying art and design </li>
               </ul>
             </li>
             <li class="progress__item">
               <h3>Architecture</h3>
               <ul>
-                <li> I was interested in geometry operation/manipulation when I studied
-                  design in my college</li>
+  
                 <li> I spent 3 years in the architecture school, thinking about how to
                   integrate form and function together</li>
                 <li>The proudest part of architecture design is turning the design
                   concept into the physical environment </li>
-                <li>Working in the architecture firm, I realized production skills are
-                  essential planning ahead and finishing projects step by step. The quality of
-                  management equals the production quality</li>
+                <li>As an architectural designer, I realized technical skills are important. every single step is part of the final result. </li>
               </ul>
             </li>
             <li class="progress__item progress__item--active">
-              <h3>Product</h3>
+              <h3>Product design</h3>
               <ul>
                 <li>I am interested in product design because I enjoy the challenge of
-                  transforming the physical world into digital</li>
-                <li>Product design solves problems for more people and has more impact in a way
+                  transforming the physical world into digital flows</li>
+                <li>Product design is scalable, solves problems for more people
                 </li>
-                <li>Connecting between the digital world and the physical world,
-                  understanding serious actions in the physical world, and provide digital solutions
-                  with wireframes. the
-                  process is challenging but fun. </li>
                 <li>I believe in simplicity, using fewer elements to solve more problems
                   always better than use more elements</li>
                 <li>Understand the product and business is the key in order to solve the problem for
@@ -376,39 +367,28 @@
       </div>
     </div>
     <div class="blankHS"></div>
-    <div class="Grid Grid--gutters Grid--cols-3 ">
+    <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell ">
         <div class="element ">
-          <div class="elementInner ShadowBox heightM">
+          <div class="elementInner ShadowBox ">
             <h3 class=>Creative & Collaborative </h3>
             <div class="lineHorizS"></div>
             <div class="blankHXS"></div>
             <h5>
-              My goal is to make great design with great people. Looking for a place that has a
-              creative and collaborative culture where sharing, helping and lifting others up is
-              encouraged
+              Looking for a place that has a creative and collaborative culture where sharing,
+              helping and lifting others up is encouraged
             </h5>
-          </div>
-        </div>
-      </div>
-      <div class="Grid-cell ">
-        <div class="element ">
-          <div class="elementInner ShadowBox heightM">
-            <h3 class=>Autonomy </h3>
-            <div class="lineHorizS"></div>
-            <div class="blankHXS"></div>
-
             <h5>
               Looking for a company that encourages me to think. Employees are empowered to innovate
               and work autonomously, without micro-managing or hand-holding.
             </h5>
-
           </div>
         </div>
       </div>
+
       <div class="Grid-cell ">
         <div class="element ">
-          <div class="elementInner ShadowBox heightM">
+          <div class="elementInner ShadowBox ">
             <h3 class=>Transparency </h3>
             <div class="lineHorizS"></div>
             <div class="blankHXS"></div>
@@ -416,9 +396,13 @@
             <h5>
               Workplaces with positive cultures support a philosophy of transparency so that every
               team member feels they know where they stand, where the company is headed, and in
-              general they feel “in the loop."
+              general they feel “in the loop".
             </h5>
+            <h5>I am always willing to know the product's short- and long-term goals. Understand the
+              work while doing it.
 
+
+            </h5>
           </div>
         </div>
       </div>
@@ -426,118 +410,7 @@
     </div>
   </div>
   <!-- Desired Working Environment -->
-  <div class="blankHM"></div>
-  <hr>
-  <div class="blankHM"></div>
 
-  <!-- Arrow -->
-  <div class="wrapper">
-    <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="Grid">
-            <p class="tArrow"> Ongoing Projects</p>
-            <img class="se-arrow" src="./icon/arrow-se.svg" alt="se-arrow">
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- Arrow -->
-  <div class="blankHM"></div>
-  <!-- projects ongoing -->
-  <div class="wrapper">
-    <div class="Grid Grid--gutters Grid--cols-2">
-      <div class="Grid-cell">
-        <a href="/project/appointa/">
-          <div class="element">
-
-            <div class="elementCard float cardBorder">
-              <img src="./image/Cover_Appointa.svg" alt="Appointa">
-              <div class="element">
-                <div class="element">
-                  <h5>For schedule interview</h5>
-                  <h3 class="arrCard">Appointa</h3>
-                  <h6>Appointa is designed for recruiters, managers, and candidates to schedule,
-                    reschedule, or cancel appointments. All in one App, sync calendars, easy to
-                    share
-                    availability between team members and candidates.</h6>
-                </div>
-              </div>
-            </div>
-          </div>
-        </a>
-      </div>
-      <div class="Grid-cell">
-        <a href="/project/seer/">
-          <div class="element">
-
-            <div class="elementCard float cardBorder">
-              <img src="./image/Cover_ANARE.jpg" alt="ANARE">
-              <div class="element">
-                <div class="element">
-                  <h5>For business owners</h5>
-                  <h3 class="arrCard">SEER</h3>
-                  <!--Analysis Report-->
-                  <h6>SEER is designed for analysis of business sentiment scores based on the input
-                    keywords. It connects to different social network platforms with API. Covert
-                    keywords to feed. NLP processes the feeds with the keywords, and generates data
-                    on
-                    the dashboard for users</h6>
-                </div>
-              </div>
-            </div>
-          </div>
-        </a>
-
-      </div>
-    </div>
-  </div>
-
-  <!-- projects ongoing -->
-
-  <div class="blankHM"></div>
-  <hr>
-  <div class="blankHM"></div>
-  <!-- Work Sample -->
-  <div class="Grid Grid--gutters Grid--full Grid--nested wrapper">
-    <div class="Grid-cell">
-      <div class="Grid">
-        <p class="tArrow"> Work Sample </p>
-        <img class="se-arrow" src="./icon/arrow-se.svg" alt="se-arrow">
-      </div>
-    </div>
-  </div>
-  <div class="blankHS"></div>
-
-  <div class="wrapper">
-    <div class="Grid Grid--gutters Grid--cols-2">
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="elementInner float cardBorder elementCard">
-            <div class="img__wrap">
-              <img class="img__img" src="image/layout_worksample.png" />
-              <div class="img__description">
-                <div class="input-field">
-                  <input type="password" id="password" placeholder="password">
-                  <button class="passwordArr" type="submit"><i class="fas fa-chevron-right"></i>
-                  </button>
-                  <div class="blankHXS"></div>
-                  <div class="pwIncorrectHeight">
-                    <span id="pwIncorrect">Password is incorrect </span>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-  </div>
-
-
-  <!-- Work Sample -->
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
