--- a/project/appointa/index.html
+++ b/project/appointa/index.html
@@ -210,6 +210,8 @@
           <ul>
             <li class=""><a href="#wireframes">Lo-fi wireframes</a></li>
             <li class=""><a href="#mid-fiWireframes">Mid-fi screen flow &#38; testing </a></li>
+            <li class=""><a href="#sitemap">Sitemap</a></li>
+
           </ul>
         </li>
         <li><a href="#design">Hi-fi design </a></li>
@@ -1230,6 +1232,33 @@
         </div>
 
         <div class="blankHM"></div>
+        <section id="sitemap">
+
+        <!-- Arrow -->
+        <div class="wrapper">
+          <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="Grid">
+                  <p class="tArrow"> Sitemap</p>
+                  <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Arrow -->
+        <div class="blankHS"></div>
+        <!-- Sitemap -->
+        <div class="Grid Grid--full u-textCenter wrapper">
+          <div class="Grid-cell">
+            <div class="element">
+              <img class="shadowFilter modal-target" src="Sitemap.svg" alt="Sitemap">
+            </div>
+          </div>
+        </div>
+        <!-- Sitemap -->
+        </section>
 
 
         <!-- members -->
