--- a/project/appointa/index.html
+++ b/project/appointa/index.html
@@ -1216,16 +1216,19 @@
                   class="textDecor APPOINTA">profile</strong> page </h4>
 
               <h4> Features</h4>
-              <h4 class="leftVerLine APPOINTA">Recruiters want to <strong
-                  class="textDecor APPOINTA">book interviews in their account</strong>
+              <h4 class="leftVerLine APPOINTA">Recruiters may sometimes <strong
+                  class="textDecor APPOINTA">book interviews for condidates</strong>
               </h4>
-              <h4 class="leftVerLine APPOINTA">Recruiters want to see <strong
-                  class="textDecor APPOINTA">team members' availability</strong>
-              </h4>
-              <h4 class="leftVerLine APPOINTA">Recruiters want to <strong
-                  class="textDecor APPOINTA">upload a spreadsheet</strong> with all team
-                members' skills </h4>
 
+              <h4 class="leftVerLine APPOINTA">Ability to book <strong class="textDecor APPOINTA">a
+                  set of interviews</strong>
+              </h4>
+              <h4 class="leftVerLine APPOINTA">May need to have <strong
+                  class="textDecor APPOINTA">interview groups</strong>for next version
+              </h4>
+              <h4 class="leftVerLine APPOINTA"> team member bulk edit feature is not necessary for
+                the first version
+              </h4>
 
             </div>
           </div>
@@ -1234,30 +1237,30 @@
         <div class="blankHM"></div>
         <section id="sitemap">
 
-        <!-- Arrow -->
-        <div class="wrapper">
-          <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="Grid">
-                  <p class="tArrow"> Sitemap</p>
-                  <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+          <!-- Arrow -->
+          <div class="wrapper">
+            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="Grid">
+                    <p class="tArrow"> Sitemap</p>
+                    <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
-        <!-- Arrow -->
-        <div class="blankHS"></div>
-        <!-- Sitemap -->
-        <div class="Grid Grid--full u-textCenter wrapper">
-          <div class="Grid-cell">
-            <div class="element">
-              <img class="shadowFilter modal-target" src="Sitemap.svg" alt="Sitemap">
+          <!-- Arrow -->
+          <div class="blankHS"></div>
+          <!-- Sitemap -->
+          <div class="Grid Grid--full u-textCenter wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <img class="shadowFilter modal-target" src="Sitemap.svg" alt="Sitemap">
+              </div>
             </div>
           </div>
-        </div>
-        <!-- Sitemap -->
+          <!-- Sitemap -->
         </section>
 
 
@@ -1269,30 +1272,39 @@
     </section>
     <div class="blankHS"></div>
     <section id="design">
-      <!-- Arrow -->
-      <div class="wrapper">
-        <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-          <div class="Grid-cell">
-            <div class="element">
-              <div class="Grid">
-                <p class="tArrow"> Hi-fi design</p>
-                <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+      <div class="colorBgAPPOINTA">
+        <div class="blankHS"></div>
+
+        <!-- Arrow -->
+        <div class="wrapper">
+          <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="Grid">
+                  <p class="tArrow"> Hi-fi design</p>
+                  <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <!-- Arrow -->
-      <div class="blankHS"></div>
-      <!-- Placeholder -->
-      <div class="Grid Grid--full u-textCenter wrapper">
-        <div class="Grid-cell">
-          <div class="element">
-            <img class="" src="../../Placeholder.svg" alt="Pain points">
+        <!-- Arrow -->
+        <div class="blankHS"></div>
+        <!-- Team member -->
+
+        <div class="Grid Grid--full u-textCenter wrapper">
+          <div class="Grid-cell">
+            <div class="element">
+              <img class="shadowFilterL" src="Hi-fi_teamMember.svg" alt="team member">
+            </div>
           </div>
         </div>
+        <div class="blankHS"></div>
+
       </div>
-      <!-- Placeholder -->
+      <!-- Team member -->
+      <div class="blankHS"></div>
+
       <!-- Arrow -->
       <div class="wrapper">
         <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
