--- a/project/appointa/index.html
+++ b/project/appointa/index.html
@@ -1295,13 +1295,21 @@
         <div class="Grid Grid--full u-textCenter wrapper">
           <div class="Grid-cell">
             <div class="element">
-              <img class="shadowFilterL" src="Hi-fi_teamMember.svg" alt="team member">
+              <img class="shadowFilterL" src="Hi-fi_Landing.svg" alt="team member">
+              <div class="blankHM"></div>
+              <img class="shadowFilterL" src="Hi-fi_TeamMember.svg" alt="team member">
+              <div class="blankHM"></div>
+
+              <img class="shadowFilterL" src="Hi-fi_IntervieTypes.svg" alt="team member">
+              <div class="blankHM"></div>
+
+              <img class="shadowFilterL" src="Hi-fi_Interviews.svg" alt="team member">
+
             </div>
           </div>
         </div>
         <div class="blankHS"></div>
 
-      </div>
       <!-- Team member -->
       <div class="blankHS"></div>
 
@@ -1324,11 +1332,13 @@
       <div class="Grid Grid--full u-textCenter wrapper">
         <div class="Grid-cell">
           <div class="element">
-            <img class="modal-target" src="UI_header.png" alt="UI Header">
+            <img class="modal-target" src="UI_header.svg" alt="UI Header">
+            
           </div>
         </div>
       </div>
       <!-- UI -->
+    </div>
 
     </section>
     <div class="blankHM"></div>
