--- a/project/appointa/index.html
+++ b/project/appointa/index.html
@@ -148,16 +148,34 @@
     </div>
   </nav>
   <!-- Working process -->
-  <img class="" src="Appointa.svg" alt="APPOINTA">
+  <div class="colorBgAPPOINTA">
+
+
+    <div class="blankHS"></div>
+    <div class="Grid Grid--full u-textCenter wrapper">
+      <div class="Grid-cell">
+        <div class="element">
+          <img class="shadowFilterL" src="Hi-fi_Landing.svg" alt="team member">
+        </div>
+      </div>
+      <div class="blankHS"></div>
+      <div class="Grid-cell">
+
+      <div class="element">
+
+        <h1>APPOINTA</h1>
+        <h4 class="">An interview scheduling tool</h4>
+      </div></div>
+    </div>
+
+  </div>
+
 
   <div class="wrapper">
-
-
     <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
       <div class="Grid-cell">
         <div class="element">
-          <h1>APPOINTA</h1>
-          <h4 class="">An interview scheduling tool</h4>
+
           <div class="blankHS"></div>
           <h4 class="textItalic">Individual work, June, 2022</h4>
           <div class="Grid Grid--gutters Grid--1of3 Grid--center">
@@ -168,7 +186,6 @@
                     <div class="">
                       <img class="IconSH" src="../../icon/logo_figma.svg" alt="Figma">
                       <h6 class="">Figma</h6>
-
                     </div>
                   </div>
                   <div class="Grid-cell">
@@ -1310,35 +1327,35 @@
         </div>
         <div class="blankHS"></div>
 
-      <!-- Team member -->
-      <div class="blankHS"></div>
+        <!-- Team member -->
+        <div class="blankHS"></div>
 
-      <!-- Arrow -->
-      <div class="wrapper">
-        <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-          <div class="Grid-cell">
-            <div class="element">
-              <div class="Grid">
-                <p class="tArrow"> UI Components</p>
-                <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+        <!-- Arrow -->
+        <div class="wrapper">
+          <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="Grid">
+                  <p class="tArrow"> UI Components</p>
+                  <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <!-- Arrow -->
+        <!-- Arrow -->
 
-      <!-- UI -->
-      <div class="Grid Grid--full u-textCenter wrapper">
-        <div class="Grid-cell">
-          <div class="element">
-            <img class="modal-target" src="UI_header.svg" alt="UI Header">
-            
+        <!-- UI -->
+        <div class="Grid Grid--full u-textCenter wrapper">
+          <div class="Grid-cell">
+            <div class="element">
+              <img class="modal-target" src="UI_header.svg" alt="UI Header">
+
+            </div>
           </div>
         </div>
+        <!-- UI -->
       </div>
-      <!-- UI -->
-    </div>
 
     </section>
     <div class="blankHM"></div>
