JS conflict fixed

--- a/project/appointa/index.html
+++ b/project/appointa/index.html
@@ -932,7 +932,7 @@
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
-                <img class="shadowFilter modal-target" src="userflow_Recruiter_onboarding.svg"
+                <img class="shadowFilter modal-target" src="userflow_Recruiter_newAccount.svg"
                   alt="Log in or sign up">
               </div>
             </div>
@@ -1364,7 +1364,7 @@
 
 
     <!-- takeaways -->
-    <section id="testing">
+    <section id="takeaways">
       <!-- Arrow -->
       <div class="wrapper">
         <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
