--- a/index.html
+++ b/index.html
@@ -309,34 +309,39 @@
                 <li> I believe design can help people solve problems in an artistic way, so I chose
                   art and design major
                 </li>
-                <li>I was interested in geometry operation/manipulation and how to provide a function with geometrics during studying art and design </li>
+                <li>I was interested in geometry operation/manipulation and how to provide a
+                  function with geometrics during studying art and design </li>
               </ul>
             </li>
             <li class="progress__item">
               <h3>Architecture</h3>
               <ul>
-  
-                <li> I spent 3 years in the architecture school, thinking about how to
+
+                <li> 3 years architecture school, focused on how to
                   integrate form and function together</li>
                 <li>The proudest part of architecture design is turning the design
                   concept into the physical environment </li>
-                <li>As an architectural designer, I realized technical skills are important. every single step is part of the final result. </li>
+                <li>As an architectural designer, I realized technical skills are important. every
+                  single step is part of the final result. </li>
               </ul>
             </li>
             <li class="progress__item progress__item--active">
-              <h3>Product design</h3>
-              <ul>
-                <li>I am interested in product design because I enjoy the challenge of
-                  transforming the physical world into digital flows</li>
-                <li>Product design is scalable, solves problems for more people
-                </li>
-                <li>I believe in simplicity, using fewer elements to solve more problems
-                  always better than use more elements</li>
-                <li>Understand the product and business is the key in order to solve the problem for
-                  users</li>
-                <li>Understand design system in both Figma and HTML/CSS</li>
-                <li>And more ... fairly new, still learning</li>
-              </ul>
+              <strong>
+                <h3>Product design </h3>
+                <ul>
+                  <li>I am interested in product design because I enjoy the challenge of
+                    transforming the physical world into digital flows</li>
+                  <li>Product design is scalable, solves problems for more people
+                  </li>
+                  <li>I believe in simplicity, using fewer elements to solve more problems
+                    always better than use more elements</li>
+                  <li>Understand the product and business is the key in order to solve the problem
+                    for
+                    users</li>
+                  <li>Understand design system in both Figma and HTML/CSS</li>
+                  <li>And more ... fairly new, still learning</li>
+                </ul>
+              </strong>
             </li>
           </ul>
 
@@ -371,7 +376,7 @@
       <div class="Grid-cell ">
         <div class="element ">
           <div class="elementInner ShadowBox ">
-            <h3 class=>Creative & Collaborative </h3>
+            <h3>Creative & Collaborative </h3>
             <div class="lineHorizS"></div>
             <div class="blankHXS"></div>
             <h5>
