--- a/photography/index.html
+++ b/photography/index.html
@@ -133,7 +133,7 @@
           <li class="nav-item inactive "><a href="/project" class="nav-link box">PROJECT</a></li>
           <li class="nav-item inactive "><a href="/architecture"class="nav-link box">ARCHITECTURE</a>
           </li>
-          <li class="nav-item active "><a href="/photography" class="nav-link box">PHOTOGRAPHY</a>
+          <li class="nav-item active greenNav"><a href="/photography" class="nav-link box">PHOTOGRAPHY</a>
           </li>
           <li class="nav-item inactive "><a href="/" class="nav-link box">ABOUT</a></li>
         </ul>
@@ -597,7 +597,7 @@
   <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
     <div class="Grid-cell">
       <h4 data-aos="fade-up">Thank You for Visiting! </h4>
-      <h5>More coming soon</h5>
+      <h5>More photos coming soon</h5>
     </div>
   </div>
   <div class="blankHM"></div>
