--- a/architecture/index.html
+++ b/architecture/index.html
@@ -128,7 +128,7 @@
       <div class="navbar">
         <ul class="nav-menu">
           <li class="nav-item inactive "><a href="/project" class="nav-link box">PROJECT</a></li>
-          <li class="nav-item active "><a href="/architecture" class="nav-link box">ARCHITECTURE</a>
+          <li class="nav-item active greenNav"><a href="/architecture" class="nav-link box">ARCHITECTURE</a>
           </li>
           <li class="nav-item inactive "><a href="/photography" class="nav-link box">PHOTOGRAPHY</a>
           </li>
