meta & slide show

--- a/project/appointa/index.html
+++ b/project/appointa/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Vicky Wang | Product Designer | UI/UX Designer</title>
+  <title>Vicky Wang | Product Designer | UI/UX Designer | APPOINTA </title>
   <meta name="keywords"
     content="Vicky Wang, Product Design, Product Designer, UI/UX Designer, Designer, Architecture, Architect, San Francisco, UC Berkeley">
   <meta name="author" content="Vicky Wang">
@@ -36,8 +36,6 @@
     content='Hi! Thanks for stopping by. I am a UI/UX designer who loves solving challenging problems. Interested in what you see? Shoot me an email :)' />
   <meta property='og:url' content="https://vickywang.me/" />
   <meta property="og:site_name" content="Vicky Wang's Website">
-
-
 
 
 
@@ -161,11 +159,12 @@
       <div class="blankHS"></div>
       <div class="Grid-cell">
 
-      <div class="element">
+        <div class="element">
 
-        <h1>APPOINTA</h1>
-        <h4 class="">An interview scheduling tool</h4>
-      </div></div>
+          <h1>APPOINTA</h1>
+          <h4 class="">An interview scheduling tool</h4>
+        </div>
+      </div>
     </div>
 
   </div>
@@ -1307,27 +1306,90 @@
         </div>
         <!-- Arrow -->
         <div class="blankHS"></div>
-        <!-- Team member -->
+
+
+        <div class="Grid Grid--full u-textCenter">
+          <div class="Grid-cell">
+            <img class="iconM" src="ppl_recruiter.png" alt="Administration account">
+            <h3>Administration account</h3>
+            <h6>Recruiters &#47; Hiring managers</h6>
+          </div>
+        </div>
+
+        <div class="blankHS"></div>
+        <div class="wrapper">
+          <div id="flex-container" class=" cardAPPOINTA">
+            <div id="left-zone">
+              <ul class="list">
+                <li class="item">
+                  <input type="radio" id="radio_testimonial-1" name="basic_carousel"
+                    checked="checked" />
+                  <label class="label_testimonial-1" for="radio_testimonial-1">Landing page</label>
+                  <div class="content-test">
+                    <img class="shadowFilterL" src="Hi-fi_Landing.svg" alt="team member">
+                  </div>
+                </li>
+                <li class="item">
+                  <input type="radio" id="radio_testimonial-2" name="basic_carousel" />
+                  <label class="label_testimonial-2" for="radio_testimonial-2">Interviews</label>
+                  <div class="content-test">
+                    <img class="shadowFilterL" src="Hi-fi_Interviews.svg" alt="team member">
+
+                  </div>
+                </li>
+                <li class="item">
+                  <input type="radio" id="radio_testimonial-3" name="basic_carousel" />
+                  <label class="label_testimonial-3" for="radio_testimonial-3">Interview
+                    types</label>
+                  <div class="content-test">
+                    <img class="shadowFilterL" src="Hi-fi_IntervieTypes.svg" alt="team member">
+
+                  </div>
+                </li>
+                <li class="item">
+                  <input type="radio" id="radio_testimonial-4" name="basic_carousel" />
+                  <label class="label_testimonial-4" for="radio_testimonial-4">Interview set</label>
+                  <div class="content-test">
+                    <img class="shadowFilterL" src="Hi-fi_TeamMember.svg" alt="team member">
+                  </div>
+                </li>
+                <li class="item">
+                  <input type="radio" id="radio_testimonial-5" name="basic_carousel" />
+                  <label class="label_testimonial-5" for="radio_testimonial-5">Team memebrs</label>
+                  <div class="content-test">
+                    <img class="shadowFilterL" src="Hi-fi_TeamMember.svg" alt="team member">
+                  </div>
+                </li>
+              </ul>
+            </div>
+            <div id="right-zone"></div>
+          </div>
+          <div class="Grid-cell">
+            <div class="element">
+              <h3 class="u-textCenter"> Key hi-fi screens </h3>
+            </div>
+          </div>
+        </div>
+
+        <div class="blankHS"></div>
+
 
         <div class="Grid Grid--full u-textCenter wrapper">
           <div class="Grid-cell">
             <div class="element">
-              <img class="shadowFilterL" src="Hi-fi_Landing.svg" alt="team member">
-              <div class="blankHM"></div>
-              <img class="shadowFilterL" src="Hi-fi_TeamMember.svg" alt="team member">
-              <div class="blankHM"></div>
-
               <img class="shadowFilterL" src="Hi-fi_IntervieTypes.svg" alt="team member">
-              <div class="blankHM"></div>
-
-              <img class="shadowFilterL" src="Hi-fi_Interviews.svg" alt="team member">
-
             </div>
           </div>
+          <div class="Grid-cell">
+            <div class="element">
+              <h3 class=""> Create interview </h3>
+            </div>
+          </div>
+
         </div>
         <div class="blankHS"></div>
 
-        <!-- Team member -->
+
         <div class="blankHS"></div>
 
         <!-- Arrow -->
