--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-  <title>Vicky Wang | product designer | UX/UI designer | Architecture</title>
+  <title>Vicky Wang | product designer | UX/UI designer | About</title>
 
   <meta name="title" content="">
 
