--- a/project/index.html
+++ b/project/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Vicky Wang | Product Designer | UI/UX Designer</title>
+  <title>Vicky Wang | Product Designer | UI/UX Designer | Projects </title>
   <meta name="keywords"
     content="Vicky Wang, Product Design, Product Designer, UI/UX Designer, Designer, Architecture, Architect, San Francisco, UC Berkeley">
   <meta name="author" content="Vicky Wang">
@@ -199,11 +199,11 @@
           <div class="element">
 
             <div class="elementCard float cardBorder">
-              <img src="../image/Cover_Appointa.svg" alt="Appointa">
+              <img src="appointa/Thumbnail.svg" alt="Appointa">
               <div class="element">
                 <div class="element">
                   <h5>For scheduling interview</h5>
-                  <h3 class="arrCard">Appointa</h3>
+                  <h3 class="arrCard">APPOINTA</h3>
                   <h5>Appointa is designed for recruiters, managers, and candidates to schedule,
                     reschedule, or cancel appointments. All in one App, sync calendars, easy to
                     share availability between team members and candidates.</h5>
